Fix production 404 errors: Update build configuration and sync asset references
- Rebuild application to ensure HTML and JS assets have matching hashes
- This resolves 404 errors for alert-DYezuu3v.js and ActivityLog-DugXDt1m.js
- Assets now properly reference the correct built files with current hashes

--- a/package.json
+++ b/package.json
@@ -24,6 +24,16 @@
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:coverage:open": "vitest run --coverage && open coverage/index.html",
+    "test:unit": "vitest run tests/unit",
+    "test:unit:watch": "vitest tests/unit",
+    "test:unit:coverage": "vitest run tests/unit --coverage",
+    "test:integration": "vitest run tests/integration",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:ui": "playwright test --ui",
+    "test:regression": "playwright test tests/regression",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e && npm run test:regression",
+    "test:ci": "npm run test:unit -- --reporter=junit --outputFile=test-results-unit.xml && npm run test:integration -- --reporter=junit --outputFile=test-results-integration.xml && npm run test:e2e -- --reporter=junit",
     "test:contact-api": "./scripts/run-contact-api-tests.sh",
     "test:contact-api:coverage": "./scripts/run-contact-api-tests.sh --coverage",
     "test:contact-api:integration": "./scripts/run-contact-api-tests.sh --integration",
@@ -49,6 +59,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
