fix: Fix Browserless access to MeetingThumbnail page
- Remove X-Frame-Options header for /meetings/thumbnail/* routes in Vercel config
- Add specific headers rule allowing thumbnail routes before general rules
- Improve Browserless script with better user agent and error handling
- Add detailed debugging for page loading and iframe detection
- Create BrowserlessTest page for testing access
- Move auth routes outside ProtectedRoute for public access
- Add test edge function to verify Browserless connectivity

This should resolve the 'all methods exhausted' error when Browserless tries to screenshot the MeetingThumbnail page.

--- a/vercel.json
+++ b/vercel.json
@@ -82,6 +82,19 @@
       ]
     },
     {
+      "source": "/meetings/thumbnail/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    },
+    {
       "source": "/(.*\\.html|/)",
       "headers": [
         {
