feat: Enhanced leads list view with logos, company names, titles, and cancellation tracking
- Add company logo integration with logo.dev API and S3 caching
- Display company name extracted from domain with proper formatting
- Show job title in format '{title} @ {company name}' when available
- Add initials fallback for missing logos with styled circular badges
- Improve email outreach source detection in webhook handler
- Add auto-enrichment trigger for new bookings
- Implement meeting cancellation tracking with 'cancelled' status
- Add Contact and Company record links in lead detail panel
- Update lead source recategorization tool
- Fix logo path to use 'logos/' folder matching bucket policy
- Add comprehensive S3 bucket setup documentation

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -8,3 +8,6 @@ entrypoint = "./functions/process-single-activity/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/process-single-activity/*.html" ]
+
+[functions.savvycal-leads-webhook]
+verify_jwt = false
