feat: enhance copilot with comprehensive response components and integrations
- Add 20+ new copilot response components for various use cases
  - Activity breakdown, planning, and communication history
  - Company intelligence and contact relationship analysis
  - Deal health, forecast, and pipeline analysis
  - Sales coaching, insights, and workflow process responses
  - Task, meeting prep, and roadmap responses
- Improve email and calendar integrations
  - Enhanced email composer with better UI/UX
  - Google Gmail integration improvements
  - Calendar icon component
- Add utility functions
  - Domain utilities for email/company matching
  - Search intelligence for smart search
  - Meeting summary parser
- Update core components
  - Enhanced Copilot with better tool call handling
  - Improved pipeline recommendation notifications
  - Updated card components (Company, Contact, Deal, Meeting)
  - Smart search enhancements
- Add test user setup utilities
- Update package dependencies

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "test:memory:components": "vitest run tests/memory/ComponentSpecificMemoryTests.test.tsx",
     "test:memory:watch": "vitest tests/memory --watch",
     "setup:playwright-user": "tsx scripts/setup-playwright-user.ts",
+    "create-test-user": "node scripts/create-test-user.js",
     "test:memory:coverage": "vitest run tests/memory --coverage",
     "playwright": "playwright test",
     "playwright:ui": "playwright test --ui",
