Add VITE_FREEPIK_API_KEY to env example

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
 
 # Optional: User ID for MCP operations (leave empty if not needed)
 USER_ID=""
+
+# Freepik API Key (for Mystic, Upscale, and Kling)
+# Get this from: https://www.freepik.com/api/dashboard
+VITE_FREEPIK_API_KEY="your-freepik-api-key"
