feat: Add email sync with AI sentiment analysis for health monitoring
- Add email sync service with Gmail OAuth integration
- Implement Claude Haiku 4.5 sentiment analysis for CRM emails
- Add communication_events table enhancements for email tracking
- Create scheduled email sync and health refresh edge functions
- Add Vercel cron job configuration for automated daily sync
- Add email sync hook and UI components
- Enhance health score calculations with email sentiment data
- Add performance indexes for health score queries
- Add last login tracking for active user identification

Edge functions deployed:
- google-gmail: Updated with OAuth user authentication
- scheduled-email-sync: Daily incremental email sync
- scheduled-health-refresh: Automated health score refresh

Migrations:
- 20251123000001_enhance_communication_events.sql
- 20251123000002_add_last_login_tracking.sql
- 20251123000003_health_score_performance_indexes.sql

--- a/vercel.json
+++ b/vercel.json
@@ -133,5 +133,15 @@
       "source": "/((?!api|.*\\.\\w+).*)",
       "destination": "/index.html"
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron/health-refresh",
+      "schedule": "0 7 * * *"
+    },
+    {
+      "path": "/api/cron/email-sync",
+      "schedule": "0 8 * * *"
+    }
   ]
 } 
