feat: Complete local Docker multi-tenant stack setup
- Convert server.js from CommonJS to ES modules for compatibility
- Fix database init SQL syntax for auth functions
- Create Dockerfile.multitenant.simple for faster local builds
- Add scripts/local-setup.sh for automated local environment setup
- Update docker-compose.local.yml to use simplified Dockerfile
- All services running locally: PostgreSQL, Redis, Express, Worker
- Database schema initialized with RLS policies
- API endpoints responding on localhost:3000
- Health checks passing for all services
- Ready for frontend and backend development

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -70,7 +70,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile.multitenant
+      dockerfile: Dockerfile.multitenant.simple
     container_name: saas-app-dev
     restart: unless-stopped
 
@@ -148,7 +148,7 @@ services:
   worker:
     build:
       context: .
-      dockerfile: Dockerfile.multitenant
+      dockerfile: Dockerfile.multitenant.simple
     container_name: saas-worker-dev
     restart: unless-stopped
 
