--- a/Dockerfile.multitenant
+++ b/Dockerfile.multitenant
@@ -18,7 +18,7 @@ RUN npm ci --legacy-peer-deps
 # Copy frontend source
 COPY src ./src
 COPY public ./public
-COPY vite.config.ts tsconfig.json tsconfig.app.json ./
+COPY vite.config.ts tsconfig.json tsconfig.node.json ./
 COPY index.html postcss.config.js tailwind.config.js ./
 
 # Build frontend with Vite
