--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.21.2",
     "react-virtuoso": "^4.14.1",
     "react-window": "^1.8.11",
