feat: Add multi-tenant organization support
- Add OrgContext for organization state management
- Add organization tables and migrations (organizations, memberships, invitations)
- Add OrgSetupStep and TeamInviteStep to onboarding flow
- Add TeamSettings page for team management
- Add AcceptInvitation page for invitation acceptance
- Add invitationService for invitation CRUD operations
- Update AuthContext signup to use dynamic redirect URL
- Add APPLY_MULTI_TENANT.sql and FIX_MULTI_TENANT_COMPLETE.sql for manual DB setup
- Update Settings page with Team tab when multi-tenant enabled
- Add org-based query utilities and hooks

Fixes:
- Fixed RLS recursion on organization_memberships table
- Fixed trigger using wrong column names (full_name vs first_name/last_name)
- Fixed signup email redirect for local development

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,12 @@ USER_ID=""
 # Freepik API Key (for Mystic, Upscale, and Kling)
 # Get this from: https://www.freepik.com/api/dashboard
 VITE_FREEPIK_API_KEY="your-freepik-api-key"
+
+# Multi-Tenant Architecture
+# Set to "true" to enable multi-organization support
+# When disabled, operates in single-tenant mode with default organization
+VITE_MULTI_TENANT_ENABLED="true"
+
+# Default Organization ID (optional, only used when VITE_MULTI_TENANT_ENABLED="false")
+# This auto-resolves organization for all operations in single-tenant mode
+VITE_DEFAULT_ORG_ID=""
