--- a/.github/workflows/supabase-sync-data.yml
+++ b/.github/workflows/supabase-sync-data.yml
@@ -35,8 +35,11 @@ jobs:
           sudo apt-get install -y postgresql-client
 
       - name: Authenticate with Supabase
+        env:
+          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
         run: |
-          echo "${{ secrets.SUPABASE_ACCESS_TOKEN }}" | supabase login --token -
+          # Authenticate using the access token
+          supabase login --token $SUPABASE_ACCESS_TOKEN
 
       - name: Get Development Branch ID
         id: get-dev-branch
