fix: Remove cleanUrls setting that broke SPA routing
- Removed cleanUrls and trailingSlash settings causing 404s
- Simplified rewrite pattern to /(.*) for better compatibility
- All routes except /api/* now correctly serve index.html

--- a/vercel.json
+++ b/vercel.json
@@ -130,12 +130,10 @@
       "destination": "/api/$1"
     },
     {
-      "source": "/((?!api|.*\\.\\w+).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
-  "trailingSlash": false,
-  "cleanUrls": true,
   "crons": [
     {
       "path": "/api/cron/health-refresh",
