--- a/.github/workflows/supabase-sync-data.yml
+++ b/.github/workflows/supabase-sync-data.yml
@@ -94,85 +94,38 @@ jobs:
           echo "✅ Development branch connection configured"
 
       - name: Export Production Data
-        env:
-          PGPASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
         run: |
-          echo "📦 Exporting production data..."
+          echo "📦 Exporting production data using Supabase CLI..."
 
-          # Use pg_dump to export production data
-          # Exclude system tables and use custom format for better compression
-          pg_dump \
-            --dbname="${{ secrets.PRODUCTION_DB_URL }}" \
-            --format=custom \
-            --no-owner \
-            --no-acl \
-            --exclude-table=supabase_migrations.schema_migrations \
-            --exclude-table=supabase_migrations.migration_history \
-            --file=production_dump.dump \
-            --verbose
-          
+          # Use Supabase CLI to dump the database (handles auth and networking)
+          supabase db dump \
+            --db-url "${{ secrets.PRODUCTION_DB_URL }}" \
+            --file production_dump.sql \
+            --data-only
+
+          echo "✅ Production data exported"
+
           # Get dump size
-          DUMP_SIZE=$(du -h production_dump.dump | cut -f1)
-          echo "✅ Production data exported: $DUMP_SIZE"
+          DUMP_SIZE=$(du -h production_dump.sql | cut -f1)
+          echo "✅ Production data size: $DUMP_SIZE"
           echo "dump_size=$DUMP_SIZE" >> $GITHUB_OUTPUT
 
       - name: Restore Data to Development Branch
-        env:
-          PGPASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
         run: |
-          echo "🔄 Restoring data to development branch..."
+          echo "🔄 Restoring data to development branch using Supabase CLI..."
 
-          # Drop all existing data (except migrations)
-          echo "⚠️ Dropping existing data in development branch..."
-          psql --dbname="${{ steps.get-dev-connection.outputs.db_url }}" <<EOF
-          -- Disable triggers temporarily
-          SET session_replication_role = replica;
+          # Use Supabase CLI to push the data to development branch
+          supabase db push \
+            --db-url "${{ steps.get-dev-connection.outputs.db_url }}" \
+            --file production_dump.sql
 
-          -- Drop all tables (migrations will recreate schema)
-          DO \$\$
-          DECLARE
-            r RECORD;
-          BEGIN
-            FOR r IN (SELECT tablename FROM pg_tables WHERE schemaname = 'public') LOOP
-              EXECUTE 'DROP TABLE IF EXISTS ' || quote_ident(r.tablename) || ' CASCADE';
-            END LOOP;
-          END \$\$;
-
-          -- Re-enable triggers
-          SET session_replication_role = DEFAULT;
-          EOF
-
-          echo "✅ Cleared existing data"
-
-          # Restore production data
-          echo "📥 Restoring production data..."
-          pg_restore \
-            --dbname="${{ steps.get-dev-connection.outputs.db_url }}" \
-            --no-owner \
-            --no-acl \
-            --verbose \
-            production_dump.dump || {
-              echo "❌ Restore failed, trying alternative method..."
-              # Alternative: Use plain SQL format
-              pg_dump \
-                --dbname="${{ secrets.PRODUCTION_DB_URL }}" \
-                --format=plain \
-                --no-owner \
-                --no-acl \
-                --exclude-table=supabase_migrations.schema_migrations \
-                --exclude-table=supabase_migrations.migration_history \
-                | psql --dbname="${{ steps.get-dev-connection.outputs.db_url }}"
-            }
-          
           echo "✅ Data restored to development branch"
 
       - name: Verify Data Sync
-        env:
-          PGPASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
         run: |
           echo "🔍 Verifying data sync..."
 
-          # Check table counts
+          # Check table counts using development branch connection
           psql --dbname="${{ steps.get-dev-connection.outputs.db_url }}" <<EOF
           SELECT 
             schemaname,
