chore: add test files to tsconfig exclude list
- Added test-calendar-e2e.ts and test-calendar-sync.ts to exclude
- These test files were causing TypeScript compilation errors
- Wildcard patterns alone don't seem sufficient for test file exclusion

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,9 @@
     "src/components/admin/GoogleTasksTests.tsx",
     "src/components/admin/WorkflowsE2ETestSuite.tsx",
     "src/test-*.ts",
-    "src/test-*.tsx"
+    "src/test-*.tsx",
+    "src/test-calendar-e2e.ts",
+    "src/test-calendar-sync.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
