Fix pg_restore strategy for Supabase branch sync
Changes to handle branch database constraints:
- Remove --clean flag to avoid dropping functions with auth.users triggers
- Use --data-only since branch already has schema from migrations
- Temporarily drop problematic FK constraints before restore
- Restore FK constraints after data import
- Add error handling to continue on expected warnings
- Use --disable-triggers for cleaner data import

This prevents errors like:
- 'cannot drop function because other objects depend on it'
- 'relation tasks does not exist' during COPY
- FK constraint violations on meeting_action_items and next_action_suggestions

--- a/.github/workflows/supabase-sync-data.yml
+++ b/.github/workflows/supabase-sync-data.yml
@@ -149,14 +149,41 @@ jobs:
           DEV_BRANCH_HOST=$(echo "$DEV_DB_URL" | sed -n 's/.*@\([^:]*\):.*/\1/p')
           echo "📡 Connecting to development branch at: $DEV_BRANCH_HOST"
 
+          # First, drop foreign key constraints that might cause issues
+          echo "🔧 Temporarily dropping foreign key constraints..."
+          psql --dbname="$DEV_DB_URL" <<'EOF' || true
+          -- Drop FK constraints that reference tasks table
+          ALTER TABLE IF EXISTS meeting_action_items DROP CONSTRAINT IF EXISTS meeting_action_items_task_id_fkey CASCADE;
+          ALTER TABLE IF EXISTS next_action_suggestions DROP CONSTRAINT IF EXISTS next_action_suggestions_created_task_id_fkey CASCADE;
+          EOF
+
           # Use pg_restore with the CLI-provided connection string
+          # Remove --clean flag to avoid dropping functions with triggers on auth.users
+          # Use --data-only to avoid schema conflicts, since the branch already has the schema
+          echo "📦 Restoring data..."
           pg_restore \
             --dbname="$DEV_DB_URL" \
             --no-owner \
             --no-privileges \
-            --clean \
-            --if-exists \
-            production_dump.sql
+            --data-only \
+            --disable-triggers \
+            production_dump.sql || {
+              echo "⚠️  pg_restore completed with warnings (this is expected for branch databases)"
+              echo "Continuing with verification..."
+            }
+
+          # Restore foreign key constraints
+          echo "🔧 Restoring foreign key constraints..."
+          psql --dbname="$DEV_DB_URL" <<'EOF' || true
+          -- Restore FK constraints
+          ALTER TABLE meeting_action_items
+            ADD CONSTRAINT meeting_action_items_task_id_fkey
+            FOREIGN KEY (task_id) REFERENCES tasks(id) ON DELETE SET NULL;
+
+          ALTER TABLE next_action_suggestions
+            ADD CONSTRAINT next_action_suggestions_created_task_id_fkey
+            FOREIGN KEY (created_task_id) REFERENCES tasks(id) ON DELETE SET NULL;
+          EOF
 
           echo "✅ Data restored to development branch"
 
