--- a/.github/workflows/seed-dev-branch.yml
+++ b/.github/workflows/seed-dev-branch.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install PostgreSQL client
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client-15
+          sudo apt-get install -y postgresql-client
 
       - name: Authenticate with Supabase
         run: |
