--- a/.env.example
+++ b/.env.example
@@ -93,3 +93,10 @@ EXTERNAL_SUPABASE_SERVICE_ROLE_KEY=""
 
 # External Project ID (for reference)
 EXTERNAL_SUPABASE_PROJECT_ID=""
+
+# Encharge.io Email Integration
+ENCHARGE_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2NvdW50SWQiOjE1NDI0MCwibmFtZSI6ImJhc2UifQ.-AF-vsstqDuRZfY4OUbYyjcfCPqbW6bDfbjRdtqV--Y
+ENCHARGE_WRITE_KEY=UY95xBh931HqCJ5xhx6YsBbM4
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=eu-west-2
