feat: complete P2 tasks - error monitoring, analytics, cohorts, and at-risk alerts
P2 Features Complete:
- Sentry error monitoring integration with user context
- Basic analytics service with page tracking and event logging
- Meeting usage indicator in sidebar (X/15 used for free tier)
- Weekly cohort analysis view in Activation Dashboard
- At-risk user detection with risk levels and suggested actions

New Components:
- src/lib/sentry.ts - Sentry SDK wrapper with error filtering
- src/lib/analytics.ts - Lightweight analytics tracking
- src/lib/hooks/usePageTracking.ts - Automatic page view tracking
- src/components/MeetingUsageIndicator.tsx - Usage display for sidebar

Database Migrations:
- 20251211160000_user_cohorts_and_alerts.sql
  - user_weekly_cohorts view
  - at_risk_users view
  - get_cohort_analysis() RPC
  - get_at_risk_users() RPC
  - get_at_risk_summary() RPC

Updates:
- AuthContext: Sets Sentry user context on login/logout
- AuthContext: Initializes analytics with user identity
- AppLayout: Added MeetingUsageIndicator to sidebar
- ActivationDashboard: Added cohort and at-risk tabs

All P0, P1, and P2 tasks now complete!

--- a/.env.example
+++ b/.env.example
@@ -100,3 +100,7 @@ ENCHARGE_WRITE_KEY=UY95xBh931HqCJ5xhx6YsBbM4
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=eu-west-2
+
+# Sentry Error Monitoring
+VITE_SENTRY_DSN=
+VITE_SENTRY_ENABLED=false
