--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-oauth/google": "^0.12.2",
+    "@sentry/react": "^10.30.0",
     "@supabase/supabase-js": "^2.56.1",
     "@tanstack/react-query": "^5.17.15",
     "@tanstack/react-table": "^8.21.3",
