--- a/vercel.json
+++ b/vercel.json
@@ -142,6 +142,10 @@
     {
       "path": "/api/cron/email-sync",
       "schedule": "0 8 * * *"
+    },
+    {
+      "path": "/api/cron/fathom-sync",
+      "schedule": "*/15 * * * *"
     }
   ]
 } 
