--- a/packages/landing/vercel.json
+++ b/packages/landing/vercel.json
@@ -33,6 +33,19 @@
           "value": "1; mode=block"
         }
       ]
+    },
+    {
+      "source": "/sw.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        },
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
+        }
+      ]
     }
   ],
   "rewrites": [
