--- a/vercel.json
+++ b/vercel.json
@@ -122,6 +122,19 @@
           "value": "1; mode=block"
         }
       ]
+    },
+    {
+      "source": "/sw.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        },
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
+        }
+      ]
     }
   ],
   "rewrites": [
@@ -146,6 +159,10 @@
     {
       "path": "/api/cron/fathom-sync",
       "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/cron/fathom-token-refresh",
+      "schedule": "0 6 * * *"
     }
   ]
 } 
