--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -24,3 +24,14 @@ entrypoint = "./functions/process-single-activity/index.ts"
 
 [functions.savvycal-leads-webhook]
 verify_jwt = false
+
+# JustCall integration (webhooks + OAuth callback must accept non-JWT requests)
+[functions.justcall-webhook]
+verify_jwt = false
+
+[functions.justcall-oauth-callback]
+verify_jwt = false
+
+# Audio proxy is consumed by <audio> tags (Range requests) so we allow token via query string
+[functions.proxy-justcall-recording]
+verify_jwt = false
