--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -47,3 +47,10 @@ verify_jwt = false
 
 [functions.enrich-company]
 verify_jwt = false
+
+# HubSpot integration (OAuth callback + webhooks must accept non-JWT requests)
+[functions.hubspot-oauth-callback]
+verify_jwt = false
+
+[functions.hubspot-webhook]
+verify_jwt = false
