feat: update landing pages with WaitlistModal and branding improvements
- Add /intro page with new VSL video for A/B testing
- Replace custom CTA modal with reusable WaitlistModal on /waitlist page
- Remove pricing section from main landing page
- Remove testimonials/reviews section from waitlist page
- Update metadata to "60 | AI Sales Assistant" branding
- Update manifest.json with new branding and description
- Clean up unused imports and code

--- a/packages/landing/public/manifest.json
+++ b/packages/landing/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Sixty Sales Dashboard",
-  "short_name": "Sales Dashboard",
-  "description": "Modern sales dashboard for tracking performance and managing pipeline",
+  "name": "60 | AI Sales Assistant",
+  "short_name": "60",
+  "description": "60 is your AI sales assistant that handles follow-ups, proposals, and meeting prep so you can focus on closing deals.",
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#10b981",
