--- a/packages/landing/vercel.json
+++ b/packages/landing/vercel.json
@@ -1,7 +1,7 @@
 {
   "installCommand": "cd ../.. && npm install",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "buildCommand": "cd packages/landing && npm run build",
+  "outputDirectory": "packages/landing/dist",
   "framework": "vite",
   "headers": [
     {
