--- a/packages/landing/vercel.json
+++ b/packages/landing/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "cd ../.. && npm install",
+  "installCommand": "npm install",
   "buildCommand": "cd packages/landing && npm run build",
   "outputDirectory": "packages/landing/dist",
   "framework": "vite",
