feat: enhance SavvyCal integration and fix HubSpot settings
- Add SavvyCal configuration modal with improved UX
- Extend SavvyCal integration hook and test coverage
- Fix HubSpot settings page and process queue handling
- Update edge functions for savvycal-config and hubspot-process-queue
- Rename migration files to resolve rebase date conflicts
- Add vercel.json configuration updates

--- a/vercel.json
+++ b/vercel.json
@@ -179,6 +179,10 @@
     {
       "path": "/api/cron/slack-deal-room-archive",
       "schedule": "10 * * * *"
+    },
+    {
+      "path": "/api/cron/hubspot-process-queue",
+      "schedule": "*/5 * * * *"
     }
   ]
 } 
