perf: optimize Vercel builds to skip unchanged projects
- Add ignoreCommand to main app to skip builds when only landing page changes
- Add ignoreCommand to landing page to skip builds when only main app changes
- Add 120s delay to landing page build to stagger concurrent builds
- Reduces compute costs by only building projects with actual changes

--- a/packages/landing/vercel.json
+++ b/packages/landing/vercel.json
@@ -1,6 +1,7 @@
 {
+  "ignoreCommand": "git diff HEAD^ HEAD --quiet -- packages/landing",
   "installCommand": "cd ../.. && npm install",
-  "buildCommand": "npm run build",
+  "buildCommand": "sleep 120 && npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
   "redirects": [
