--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "ignoreCommand": "git diff HEAD^ HEAD --quiet -- . ':!packages/landing'",
   "buildCommand": "npm run build",
   "framework": "vite",
   "headers": [
