--- a/packages/landing/vercel.json
+++ b/packages/landing/vercel.json
@@ -1,4 +1,5 @@
 {
+  "ignoreBuildStep": "bash ../../scripts/vercel-ignore-landing.sh",
   "installCommand": "cd ../.. && npm install",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
