Relocate and improve Vercel ignore build script for landing page

--- a/packages/landing/vercel.json
+++ b/packages/landing/vercel.json
@@ -1,5 +1,5 @@
 {
-  "ignoreBuildStep": "bash ../../scripts/vercel-ignore-landing.sh",
+  "ignoreBuildStep": "bash scripts/vercel-ignore-landing.sh",
   "installCommand": "cd ../.. && npm install",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
