feat(process-maps): enhance UX with direction selection, better exports, and concise descriptions
Process Map Improvements:
- Add per-map H/V direction picker popup when generating new maps
- Add "Regenerate as: [H] [V]" toggle in View Dialog for existing maps
- Increase PNG export resolution from 2x to 4x for readable text when zoomed
- Show concise description summary (key steps only, under 60 words)
- Add tabbed interface (Diagram, Code, Steps) for different views
- Cache both H and V versions per process map for instant switching
- Fix PNG download "Image is not a constructor" error (window.Image)

Also includes:
- VSL Analytics workflow process map support
- Various waitlist and Slack notification improvements
- Meeting list enhancements
- Platform dashboard updates

--- a/.github/workflows/scheduled-jobs.yml
+++ b/.github/workflows/scheduled-jobs.yml
@@ -33,3 +33,15 @@ jobs:
             -H "x-cron-secret: ${{ secrets.CRON_SECRET }}" \
             "${{ secrets.SUPABASE_URL }}/functions/v1/scheduled-email-sync"
 
+  waitlist-daily-digest:
+    name: Waitlist Daily Digest (Backup)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Call Waitlist Notification Function
+        run: |
+          curl -X POST \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" \
+            -d '{"type": "daily_digest", "triggeredBy": "github-actions"}' \
+            "${{ secrets.SUPABASE_URL }}/functions/v1/slack-waitlist-notification"
+
