--- a/packages/landing/package.json
+++ b/packages/landing/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.17.9",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary-video-analytics": "^1.8.2",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
     "framer-motion": "^10.18.0",
