--- a/vercel.json
+++ b/vercel.json
@@ -183,6 +183,10 @@
     {
       "path": "/api/cron/hubspot-process-queue",
       "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/waitlist-daily-digest",
+      "schedule": "0 9 * * *"
     }
   ]
 } 
