feat(sentry): add Sentry Bridge auto-ticketing and enhanced error monitoring
## Sentry Bridge (Sentry → AI Dev Hub)
- Add webhook proxy at /api/webhooks/sentry with signature verification
- Add sentry-webhook Edge Function (receiver with queue)
- Add sentry-bridge-worker Edge Function (queue processor)
- Add database schema for config, mappings, queue, triage, and DLQ
- Add Admin UI at /platform/sentry-bridge with:
  - Configuration management (enable/disable, triage mode)
  - Routing rules for project/error type routing
  - Triage queue for manual approval workflow
  - Dead letter queue for failed items
  - Real-time metrics dashboard
- Add privacy redaction for PII (emails, IPs, tokens)
- Add ticket payload formatter with AI context

## Enhanced Sentry Core
- Add httpClientIntegration for API error tracking
- Add extraErrorDataIntegration for deeper error context
- Add feedbackIntegration (manual trigger)
- Enhance error filtering (ResizeObserver, empty rejections)
- Add error categorization system
- Add trace header injection for distributed tracing
- Add business context tagging utilities
- Add SentryDebugPanel for development

## Edge Function Integration
- Add shared sentryEdge.ts with wrapWithSentry utility
- Integrate Sentry tracing into all 40+ Edge Functions
- Continue distributed traces from frontend requests

## Build & Tooling
- Add @sentry/vite-plugin for source maps
- Add .sentryclirc for CLI configuration
- Configure release tracking and artifact upload

Environment variables added:
- SENTRY_WEBHOOK_SECRET
- SENTRY_WEBHOOK_PROXY_SECRET
- AI_DEV_HUB_MCP_URL

--- a/.env.example
+++ b/.env.example
@@ -115,6 +115,19 @@ AWS_REGION=eu-west-2
 VITE_SENTRY_DSN=
 VITE_SENTRY_ENABLED=false
 
+# =============================================================================
+# SENTRY BRIDGE (Auto-ticketing from Sentry to AI Dev Hub)
+# =============================================================================
+# Webhook Security
+# Secret for Sentry to sign webhook payloads (configure in Sentry Integration settings)
+SENTRY_WEBHOOK_SECRET=""
+# Secret for signing proxied requests from Vercel to Supabase Edge Function
+SENTRY_WEBHOOK_PROXY_SECRET=""
+
+# AI Dev Hub MCP Integration
+# URL to the AI Dev Hub MCP server for creating tickets
+AI_DEV_HUB_MCP_URL=""
+
 
 # =============================================================================
 # SUPABASE EDGE FUNCTION SECRETS (set via supabase secrets set, not Vite)
