--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
+    "@sentry/vite-plugin": "^4.6.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
