--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "buildCommand": "npm run build",
   "framework": "vite",
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "nodejs20.x"
+    }
+  },
   "headers": [
     {
       "source": "/api/(.*)",
