feat(sentry): add testSentryFatal() helper for webhook testing
- Adds global window.testSentryFatal() function
- Sends fatal-level errors with high priority context
- Exposes Sentry globally as window.Sentry for debugging
- Forces unique fingerprint to create new issues

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -54,3 +54,7 @@ verify_jwt = false
 
 [functions.hubspot-webhook]
 verify_jwt = false
+
+# Health check endpoint - public access for monitoring services
+[functions.health]
+verify_jwt = false
