--- a/package.json
+++ b/package.json
@@ -98,7 +98,8 @@
     "@react-oauth/google": "^0.12.2",
     "@sentry/react": "^10.30.0",
     "@supabase/supabase-js": "^2.56.1",
-    "@tanstack/react-query": "^5.17.15",
+    "@tanstack/query-core": "^5.90.12",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
     "@tiptap/extension-image": "^3.11.0",
