--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,7 +49,8 @@
     "src/test-*.ts",
     "src/test-*.tsx",
     "src/test-calendar-e2e.ts",
-    "src/test-calendar-sync.ts"
+    "src/test-calendar-sync.ts",
+    "packages/**/*"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
