--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -58,3 +58,19 @@ verify_jwt = false
 # Health check endpoint - public access for monitoring services
 [functions.health]
 verify_jwt = false
+
+# Copilot (called directly from browser; must allow CORS preflight without platform JWT gate)
+[functions.api-copilot]
+verify_jwt = false
+
+# Gmail (called directly from browser; uses in-function auth + allowlist-based CORS)
+[functions.google-gmail]
+verify_jwt = false
+
+# Slack interactive webhooks (buttons, modals) - uses Slack signature verification
+[functions.slack-interactive]
+verify_jwt = false
+
+# HITL test endpoint - for testing approval flows
+[functions.test-hitl]
+verify_jwt = false
